# cbhe

./: .gitignore  CHANGELOG.md  Makefile  README.md  example.c  pyproject.toml  user_formats.json
docs/: article.md
examples/: gradient_colored.py  nibbles.py  simple_colored.py  simple_print.py
src/cbhe/: __init__.py  colors.py  constants.py  formats.py  handlers.py  hexfile.py  interpret.py  keys.py  state.py  terminal.py  ui.py
