[project]
name = "cbhe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alexeev Bronislav", email = "alexeev.dev@mail.ru" }]
requires-python = ">=3.13"
dependencies = ["pygments>=2.20.0", "rich>=15.0.0", "textual>=8.2.4"]

[project.scripts]
cbhe = "cbhe:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
