[project]
name = "cbhe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alexeev Bronislav", email = "alexeev.dev@mail.ru" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
cbhe = "cbhe:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
